--- a/.github/workflows/following.yml
+++ b/.github/workflows/following.yml
@@ -2,12 +2,14 @@ name: Run Following Script Daily
 
 on:
   schedule:
-    - cron: "0 14 * * *"  # Runs at 6 AM Eastern (10 AM UTC)
+    - cron: "0 10 * * *"  # Runs at 6 AM Eastern (10 AM UTC)
   workflow_dispatch:       # Allows manual trigger in GitHub UI
 
 jobs:
   run-following-script:
     runs-on: ubuntu-latest
+    env:
+      TIKAPI_KEY: ${{ secrets.TIKAPI_KEY }}  # Pass API key as environment variable
 
     steps:
       - name: Checkout code
@@ -24,5 +26,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Following script
-        run: |
-          python Following.py
+        run: python Following.py
